@@ -1,0 +1,71 @@
+---
+name: Run Tests
+
+on:
+  push:
+    branches:
+      - "*"
+  pull_request:
+    branches:
+      - "*"
+  schedule:
+    - cron: "15 6 * * 0"  # Once weekly, on Sundays
+
+jobs:
+  test:
+    name: "Linux, Perl v${{ matrix.perl-version }}"
+    runs-on: ubuntu-latest
+
+    strategy:
+      matrix:
+        perl-version:
+          - "latest"
+          - "5.36"
+          - "5.34"
+          - "5.32"
+          - "5.30"
+          - "5.28"
+          - "5.26"
+          - "5.24"
+          - "5.22"
+          - "5.20"
+          - "5.18"
+          - "5.16"
+          - "5.14"
+          - "5.12"
+          - "5.10"
+          - "5.8"
+
+    container:
+      image: perldocker/perl-tester:${{ matrix.perl-version }}
+
+    env:
+      AUTHOR_TESTING: 1
+
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v3
+
+      - name: Perl version
+        run: perl -V
+
+      - name: Install dependencies
+        uses: perl-actions/install-with-cpanm@v1
+        with:
+          sudo: false
+          args: "--installdeps ."
+
+      - name: Build
+        run: |
+          perl Makefile.PL
+          make
+
+      - name: Test
+        run: make test
+
+      - name: Archive CPANM logs
+        if: ${{ failure() }}
+        uses: actions/upload-artifact@v3
+        with:
+          name: build.log
+          path: ~/.cpanm/work/*/build.log
